@@ -1,3 +1,8 @@
+2012-06-09  Gabriel Dos Reis  <gdr@cs.tamu.edu>
+
+	* interp/io.boot (%Reader): Add idx field.
+	* interp/preparse.lisp ($INDEX): Remove.  Adjust users.
+
 2012-06-06  Gabriel Dos Reis  <gdr@cs.tamu.edu>
 
 	* interp/lexing.boot: Move %Line to io.boot.
